# Voice-cloning

./: .gitignore  README.md  experiment_report.md  requirements.txt
Task1/: lecture1_raw.md  whisper_transcribe.py
Task2/: lecture1_optimized_cn.md  (+1 more)
Task3/MOSS-TTS-Nano-main/: .gitignore  LICENSE  README.md  README_zh.md  app.py  app_onnx.py  infer.py  infer_onnx.py  moss_tts_nano_runtime.py  onnx_tts_runtime.py  pyproject.toml  requirements.txt  text_normalization_pipeline.py
Task3/MOSS-TTS-Nano-main/assets/: demo.jsonl
Task3/MOSS-TTS-Nano-main/examples/android_onnx_runtime/: README.md  settings.gradle.kts
Task3/MOSS-TTS-Nano-main/examples/android_onnx_runtime/app/: build.gradle.kts
Task3/MOSS-TTS-Nano-main/examples/android_onnx_runtime/app/src/main/: AndroidManifest.xml
Task3/MOSS-TTS-Nano-main/examples/android_onnx_runtime/app/src/main/java/com/openmoss/ttsnano/onnxruntime/: DemoPrompts.kt  MainActivity.kt  MossOnnxDemoEngine.kt
Task3/MOSS-TTS-Nano-main/examples/android_onnx_runtime/app/src/main/res/values/: strings.xml  styles.xml
Task3/MOSS-TTS-Nano-main/finetuning/: README.md  README_zh.md  __init__.py  common.py  dataset.py  prepare_data.py  run_train.sh  sft.py  verify.py
Task3/MOSS-TTS-Nano-main/finetuning/configs/: accelerate_ddp_8gpu.yaml
Task3/MOSS-TTS-Nano-main/finetuning/datasets/: seed_tts_eval_text_speech_pair.codes.sample10.jsonl
Task3/MOSS-TTS-Nano-main/models/MOSS-TTS-Nano-100M-ONNX/: browser_poc_manifest.json  tokenizer.model  tts_browser_onnx_meta.json
Task3/MOSS-TTS-Nano-main/moss_tts_nano/: __main__.py  cli.py
(+4 files in other folders)
